--- a/index.fld/stylesheet.css
+++ b/index.fld/stylesheet.css
@@ -58,9 +58,7 @@ a:visited
 	mso-style-id:5;}
 td
 	{mso-style-parent:style0;
-	padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
+	padding:0px;
 	mso-ignore:padding;
 	color:windowtext;
 	font-size:11.0pt;
@@ -269,3 +267,17 @@ td
 	font-size:10.0pt;
 	text-decoration:underline;
 	text-underline-style:single;}
+.xl91
+	{mso-style-parent:style0;
+	font-size:10.0pt;
+	font-weight:700;
+	font-family:Arial, serif;
+	mso-font-charset:0;
+	mso-number-format:"Short Date";
+	text-align:center;
+	vertical-align:middle;
+	border:.5pt solid #A6A6A6;
+	background:#D3DDEF;
+	mso-pattern:black none;
+	white-space:normal;
+	mso-rotate:75;}
