--- a/index.fld/stylesheet.css
+++ b/index.fld/stylesheet.css
@@ -58,7 +58,9 @@ a:visited
 	mso-style-id:5;}
 td
 	{mso-style-parent:style0;
-	padding:0px;
+	padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
 	mso-ignore:padding;
 	color:windowtext;
 	font-size:11.0pt;
